Fix mobile display where it was overflowing

--- a/Movie_Trailer/cast.css
+++ b/Movie_Trailer/cast.css
@@ -13,7 +13,7 @@
 .row img{
     width: 80%;
 }
-.row-img:nth-child(1) {
+.row-img:nth-child(1) img{
     width: 100%;
    }
    
@@ -56,6 +56,9 @@
         display: initial;
     }
     .row-2{
-        margin: 20px inherit;
+        margin: 20px 0;
+    }
+    .row-img-2{
+        width: 100%;
     }
 }
