--- a/Movie_Trailer/ironman.css
+++ b/Movie_Trailer/ironman.css
@@ -2,7 +2,6 @@
 
 .body{
 	background-color: #A80900;
-	margin: 30px;
 	
 }
 footer{
